--- a/language-protocolbuffers.cabal
+++ b/language-protocolbuffers.cabal
@@ -22,7 +22,7 @@ license-file:   LICENSE
 library
   hs-source-dirs:   src
   default-language: Haskell2010
-  ghc-options:      -Wall
+  ghc-options:      -Wall -Werror
   build-tools:      happy, alex
 
   exposed-modules:
